Fixed the text input widths so the answer and input doesn't overlap

--- a/src/scss/elements/_text-inputs.scss
+++ b/src/scss/elements/_text-inputs.scss
@@ -9,8 +9,9 @@ input {
   font-family: $body;
   margin: 0;
   outline: none;
-  padding: 0 3rem 0 0.5rem;
+  padding: 0;
   font-size: 1rem;
   resize: none;
   width: 100%;
+  max-width: calc(100% - 15rem);
 }
